--- a/index.html
+++ b/index.html
@@ -16,55 +16,69 @@
             <img src="/static/Assets/logo.png" class="logo">
             <a href="#">
                 <button class="nav-button">
-                    <i class="material-icons md-3">explore</i><br>
+                    <i class="material-icons md-3">explore</i>
                     <span>Explore</span>
                 </button>
             </a>
             <a href="/static/hotel.html">
                 <button class="nav-button">
-                    <i class="material-icons md-3">location_city</i><br>
+                    <i class="material-icons md-3">location_city</i>
                     <span>Hotels</span>
                 </button>
             </a>
             <a href="#">
                 <button class="nav-button">
-                    <i class="material-icons md-3">flight</i><br>
+                    <i class="material-icons md-3">flight</i>
                     <span>Flights</span>
                 </button>
             </a>
         </div>
     </header>
-    <div>
+    <div class="boxform">
         <form id="flight-search">
-            <label for="Trip-Type">Trip Type:</label>
-            <select id="Trip-Type" name="Trip-Type" onchange=""> <!--selectoperation()-->
+            <input class="triptype" type="radio" name="Trip-Type" value="One-Way">
+            <label class="triptypelabels" for="One-Way">One Way</label>
+            <input class="triptype" type="radio" name="Trip-Type"  value="Round-Trip">
+            <label class="triptypelabels" for="Round-Trip">Round Trip</label>
+            <input class="triptype"type="radio" name="Trip-Type" value="Multi-City">
+            <label class="triptypelabels" for="Multi-City">Multi City</label><br>
+
+            <!--label for="Trip-Type">Trip Type:</label>
+            <select id="Trip-Type" name="Trip-Type" > <!--onchange="selectoperation()">
                 <option value="One-Way">One Way</option>
                 <option value="Round-Trip">Round Trip</option>
                 <option value="Multi-City">Multi City</option>
-            </select><br>
-            <from-to-depart id="one"></from-to-depart>
-            <!--from-to-depart class="second" id="2"></from-to-depart>
-            <button class="add" id="add2" onclick="">Add</button>
-            <from-to-depart class="second" id="3"></from-to-depart>
-            <button class="add" id="add3" onclick="">Add</button>
-            <button class="delete" id="delete3" onclick="">Delete</button>
-            <from-to-depart class="second" id="4"></from-to-depart>
-            <button class="add" id="add4" onclick="">Add</button>
-            <button class="delete" id="delete4" onclick="">Delete</button>
-            <from-to-depart class="second" id="5"></from-to-depart!-->
+            </select-->
+
+            <from-to-depart from-to-depart="from-to-depart_1"></from-to-depart>
+            <from-to-depart from-to-depart="from-to-depart_2"></from-to-depart>
+            <button class="add" type="button" id="add2">+</button>
+            <from-to-depart from-to-depart="from-to-depart_3"></from-to-depart>
+            <button class="add" id="add3">+</button>
+            <button class="delete" id="delete3">-</button>
+            <from-to-depart from-to-depart="from-to-depart_4"></from-to-depart>
+            <button class="add" id="add4" >+</button>
+            <button class="delete" id="delete4">-</button>
+            <from-to-depart from-to-depart="from-to-depart_5"></from-to-depart>
+            <button class="delete" id="delete5">-</button>
             
-            <label class="return" for="Return" id="Return">Return : </label>
-            <input class="return" type="date" id="Return" name="Return">
+            <label class="returndate" for="ReturnDate" id="ReturnDate">Return : </label>
+            <input class="returninput" type="date" name="ReturnDate">
+
             <label class="adult" for="Adult" id="Adult">Adult : </label>
-            <input class="adult" type="number" id="Adult" name="Adult" min="0" max="5">
-            <label class="children" for="traveller type" id="Children">Children : </label>
-            <input class="children" type="number" id="Children" name="Children" min="0" max="5">
+            <input class="adultinput" type="number" id="Adult" name="Adult" min="1" max="5">
+
+            <label class="child" for="Children" id="Children">Children : </label>
+            <input class="childinput" type="number" id="Children" name="Children" min="0" max="5">
+
             <button class="search" type="submit">Search</button>
         </form>
     </div>
     
     <script src="static/components/FromToDepart.js"></script>
+    <script src="static/components/FlightCard.js"></script>
     <script src="static/index.js" type="text/javascript"></script>
+    <script src="static/operation.js" type="text/javascript"></script>
     <!--script src="static/config.js" type="text/javascript"></script>
     <script src="static/operation.js" type="text/javascript"></script>
     <script src="static/amadeus/api.js" type="text/javascript"></script!-->
