--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
     <script src="static/components/FlightCard/FlightCard.js"></script>
     <script src="static/index.js" type="module"></script>
     <script src="static/operation.js" type="text/javascript"></script>
-    <!--script src="static/config.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/npm/pouchdb@8.0.0/dist/pouchdb.min.js"></script>
+    <script src="static/lib/pouchdb.find.js"></script>
+    <!--script src="static/localdb.js" type="text/javascript"></script>
+    <script src="static/config.js" type="text/javascript"></script>
     <script src="static/operation.js" type="text/javascript"></script>
     <script src="static/amadeus/api.js" type="text/javascript"></script!-->
 
