--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="static/operation.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/npm/pouchdb@8.0.0/dist/pouchdb.min.js"></script>
     <script src="static/lib/pouchdb.find.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/forerunnerdb/2.0.22/fdb-all.js" integrity="sha512-OtXOgryuUOGDf+ObVGG1ekcBj2Bb0ZnndDEwoe1un7B0AAfirc9frQs0yFuVuCDhZVRoi77p2viCgMUW6ZeJ2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--script src="static/localdb.js" type="text/javascript"></script>
     <script src="static/config.js" type="text/javascript"></script>
     <script src="static/operation.js" type="text/javascript"></script>
