--- a/index.html
+++ b/index.html
@@ -46,27 +46,19 @@
             <label class="triptypelabels" for="Multi-City">Multi City</label><br>
 
             <!--label for="Trip-Type">Trip Type:</label>
-            <select id="Trip-Type" name="Trip-Type" > <!--onchange="selectoperation()">
+            <select id="Trip-Type" name="Trip-Type" > <onchange="selectoperation()">
                 <option value="One-Way">One Way</option>
                 <option value="Round-Trip">Round Trip</option>
                 <option value="Multi-City">Multi City</option>
             </select-->
 
-            <from-to-depart value="1" from-to-depart="from-to-depart_1"></from-to-depart>
-            <from-to-depart value="2" from-to-depart="from-to-depart_2"></from-to-depart>
+            <!-- <from-to-depart value="1" from-to-depart="from-to-depart_1"></from-to-depart> -->
+            <!-- <from-to-depart value="2" from-to-depart="from-to-depart_2"></from-to-depart>
             <from-to-depart value="3" from-to-depart="from-to-depart_3"></from-to-depart>
             <from-to-depart value="4" from-to-depart="from-to-depart_4"></from-to-depart>
-            <from-to-depart value="5" from-to-depart="from-to-depart_5"></from-to-depart>
+            <from-to-depart value="5" from-to-depart="from-to-depart_5"></from-to-depart> -->
 
-            <label class="returndate" for="ReturnDate" id="ReturnDate">Return : </label>
-            <input class="returninput" type="date" name="ReturnDate">
-
-            <label class="adult" for="Adult" id="Adult">Adult : </label>
-            <input class="adultinput" type="number" id="Adult" name="Adult" min="1" max="5">
-
-            <label class="child" for="Children" id="Children">Children : </label>
-            <input class="childinput" type="number" id="Children" name="Children" min="0" max="5">
-
+           
             <button class="search" type="submit">Search</button>
         </form>
     </div>
@@ -77,7 +69,9 @@
     <script src="static/operation.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/npm/pouchdb@8.0.0/dist/pouchdb.min.js"></script>
     <script src="static/lib/pouchdb.find.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/forerunnerdb/2.0.22/fdb-all.js" integrity="sha512-OtXOgryuUOGDf+ObVGG1ekcBj2Bb0ZnndDEwoe1un7B0AAfirc9frQs0yFuVuCDhZVRoi77p2viCgMUW6ZeJ2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/forerunnerdb/2.0.22/fdb-all.js"
+        integrity="sha512-OtXOgryuUOGDf+ObVGG1ekcBj2Bb0ZnndDEwoe1un7B0AAfirc9frQs0yFuVuCDhZVRoi77p2viCgMUW6ZeJ2g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--script src="static/localdb.js" type="text/javascript"></script>
     <script src="static/config.js" type="text/javascript"></script>
     <script src="static/operation.js" type="text/javascript"></script>
