--- a/index.html
+++ b/index.html
@@ -44,26 +44,11 @@
             <label class="triptypelabels" for="Round-Trip">Round Trip</label>
             <input class="triptype" type="radio" name="Trip-Type" value="Multi-City">
             <label class="triptypelabels" for="Multi-City">Multi City</label><br>
-
-            <!--label for="Trip-Type">Trip Type:</label>
-            <select id="Trip-Type" name="Trip-Type" > <onchange="selectoperation()">
-                <option value="One-Way">One Way</option>
-                <option value="Round-Trip">Round Trip</option>
-                <option value="Multi-City">Multi City</option>
-            </select-->
-
-            <!-- <from-to-depart value="1" from-to-depart="from-to-depart_1"></from-to-depart> -->
-            <!-- <from-to-depart value="2" from-to-depart="from-to-depart_2"></from-to-depart>
-            <from-to-depart value="3" from-to-depart="from-to-depart_3"></from-to-depart>
-            <from-to-depart value="4" from-to-depart="from-to-depart_4"></from-to-depart>
-            <from-to-depart value="5" from-to-depart="from-to-depart_5"></from-to-depart> -->
-
-           
             <button class="search" type="submit">Search</button>
         </form>
     </div>
 
-    <script src="static/components/FromToDepart/FromToDepart.js"></script>
+    <script src="static/components/TripInformation/tripInformation.js"></script>
     <script src="static/components/FlightCard/FlightCard.js"></script>
     <script src="static/index.js" type="module"></script>
     <script src="static/operation.js" type="text/javascript"></script>
@@ -81,3 +66,41 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--form id="flight-search">
+    <label for="Trip-Type">Trip Type:</label>
+    <select id="Trip-Type" name="Trip-Type" > <onchange="selectoperation()">
+        <option value="One-Way">One Way</option>
+        <option value="Round-Trip">Round Trip</option>
+        <option value="Multi-City">Multi City</option>
+    </select>
+
+    <from-to-depart value="1" from-to-depart="from-to-depart_1"></from-to-depart>
+    <from-to-depart value="2" from-to-depart="from-to-depart_2"></from-to-depart>
+    <from-to-depart value="3" from-to-depart="from-to-depart_3"></from-to-depart>
+    <from-to-depart value="4" from-to-depart="from-to-depart_4"></from-to-depart>
+    <from-to-depart value="5" from-to-depart="from-to-depart_5"></from-to-depart> 
+
+   
+    <button class="search" type="submit">Search</button>
+</form> -->
