Modified index.js,tripinfo.js on 30/05/2023

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="navbar">
             <img src="/static/Assets/logo.png" class="logo">
-            <a href="#">
+            <!-- <a href="#">
                 <button class="nav-button">
                     <i class="material-icons md-3">explore</i>
                     <span>Explore</span>
@@ -33,7 +33,7 @@
                     <i class="material-icons md-3">flight</i>
                     <span>Flights</span>
                 </button>
-            </a>
+            </a> -->
         </div>
     </header>
     <div class="boxform">
