Modified some names and solved one issue on 31/05/2023

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <button class="search" type="submit">Search</button>
         </form>
     </div>
-
+    <div name="flightDataViewContainer">
+    </div>
     <script src="static/components/TripInformation/tripInformation.js"></script>
     <script src="static/components/FlightCard/FlightCard.js"></script>
     <script src="static/index.js" type="module"></script>
