Removed functions from app.js to funcction_api and pushed index.html in static folder

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/views/OneWayAndRoundTripHandler/OneWayAndRoundTripHandler.css">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="/static/Assets/logo.png" class="logo">
+            <img src="./Assets/logo.png" class="logo">
             <!-- <a href="#">
                 <button class="nav-button">
                     <i class="material-icons md-3">explore</i>
@@ -49,12 +49,12 @@
     </div>
     <div name="flightDataViewContainer">
     </div>
-    <script src="static/components/TripInformation/tripInformation.js"></script>
-    <script src="static/components/FlightCard/FlightCard.js"></script>
-    <script src="static/index.js" type="module"></script>
-    <script src="static/operation.js" type="text/javascript"></script>
-    <script src="//cdn.jsdelivr.net/npm/pouchdb@8.0.0/dist/pouchdb.min.js"></script>
-    <script src="static/lib/pouchdb.find.js"></script>
+    <script src="./components/TripInformation/tripInformation.js"></script>
+    <script src="./components/FlightCard/FlightCard.js"></script>
+    <script src="index.js" type="module"></script>
+    <script src="operation.js" type="text/javascript"></script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/pouchdb@8.0.0/dist/pouchdb.min.js"></script>
+    <script src="static/lib/pouchdb.find.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/forerunnerdb/2.0.22/fdb-all.js"
         integrity="sha512-OtXOgryuUOGDf+ObVGG1ekcBj2Bb0ZnndDEwoe1un7B0AAfirc9frQs0yFuVuCDhZVRoi77p2viCgMUW6ZeJ2g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
